Implement task deletion

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,8 @@
                     <span v-else>
                         {{ task.body }}
                     </span>
+
+                    - <button @click="deleteTask(task)">Delete</button>
                 </li>
             </ul>
         </div>
